--- a/CPW219-eCommerceSite/Views/Home/Index.cshtml
+++ b/CPW219-eCommerceSite/Views/Home/Index.cshtml
@@ -2,4 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 
-
+<h1 class="display-3"> Welcome to Sugarbee Brunch Café!! </h1>
+<table class="table-warning">
+    <h3>Menu</h3>
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Food Item</th>
+            <th scope="col">Description</th>
+            <th scope="col">Price</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Honey Cake</td>
+            <td>ITEM DESC</td>
+            <td>$3.99</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Rosemary Lemonade</td>
+            <td>ITEM DESC</td>
+            <td>$2.00</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Golden Leaf Tea (with real honeycomb)</td>
+            <td>ITEM DESC</td>
+            <td>$4.00</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Spring Picnic Sandwich Platter</td>
+            <td>ITEM DESC</td>
+            <td>$20.00</td>
+        </tr>
+    </tbody>
+</table>
