Added an about company blurb

--- a/CPW219-eCommerceSite/Views/Home/Index.cshtml
+++ b/CPW219-eCommerceSite/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <h1 class="display-3"> Welcome to Sugarbee Brunch Café!! </h1>
-<table class="table-warning">
+<table class="table table-warning table-hover">
     <h3>Menu</h3>
     <thead>
         <tr>
-            <th scope="col">#</th>
+            <th scope="col">🐝</th>
             <th scope="col">Food Item</th>
             <th scope="col">Description</th>
             <th scope="col">Price</th>
@@ -40,3 +40,13 @@
         </tr>
     </tbody>
 </table>
+
+<h3>🌸About our little establishment🌸</h3>
+<p>
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+    lorem ipsum dolor sit lauren epsum solo sh dougus dippus deltoid dump krampus krungus forrest gump
+</p>
