--- a/CPW219-eCommerceSite/wwwroot/css/site.css
+++ b/CPW219-eCommerceSite/wwwroot/css/site.css
@@ -1,11 +1,11 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -17,6 +17,11 @@ html {
   min-height: 100%;
 }
 
+h1 {
+    color: rgb(255, 229, 181);
+}
+
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: rgb(186, 154, 143);
 }
