Added update/details/delete links on menu page

--- a/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
+++ b/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.MenuItemPrice)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a class="btn btn-outline-dark" asp-action="Edit" asp-route-id="@item.MenuItemID">Edit</a>
+                <a class="btn btn-outline-dark" asp-action="Details" asp-route-id="@item.MenuItemID">Details</a>
+                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.MenuItemID">Delete</a>
             </td>
         </tr>
 }
