--- a/CPW219-eCommerceSite/Views/MenuItem/Create.cshtml
+++ b/CPW219-eCommerceSite/Views/MenuItem/Create.cshtml
@@ -20,12 +20,12 @@ else
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="MenuItemName" class="control-label"></label>
+                    <label asp-for="MenuItemName" class="control-label"> Menu Item </label>
                     <input asp-for="MenuItemName" class="form-control" />
                     <span asp-validation-for="MenuItemName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MenuItemPrice" class="control-label"></label>
+                    <label asp-for="MenuItemPrice" class="control-label"> Price </label>
                     <input asp-for="MenuItemPrice" class="form-control" />
                     <span asp-validation-for="MenuItemPrice" class="text-danger"></span>
                 </div>
