--- a/CPW219-eCommerceSite/Views/MenuItem/Edit.cshtml
+++ b/CPW219-eCommerceSite/Views/MenuItem/Edit.cshtml
@@ -10,11 +10,9 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MenuItemID" class="control-label"></label>
-                <input asp-for="MenuItemID" class="form-control" />
-                <span asp-validation-for="MenuItemID" class="text-danger"></span>
-            </div>
+
+            <input type="hidden" asp-for="MenuItemID"/>
+
             <div class="form-group">
                 <label asp-for="MenuItemName" class="control-label"></label>
                 <input asp-for="MenuItemName" class="form-control" />
