--- a/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
+++ b/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
@@ -6,6 +6,14 @@
 
 <h1>Menu</h1>
 
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @ViewData["Message"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 <p>
     <a asp-action="Create" asp-controller="MenuItems">Create New Menu Item</a>
 </p>
