--- a/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="MenuItem" asp-action="Index">Menu</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Members" asp-action="Register">Make an account!</a>
+                        </li>
                     </ul>
                 </div>
             </div>
