--- a/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Members" asp-action="Register">Make an account!</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Members" asp-action="Login">Sign in</a>
+                        </li>
                     </ul>
                 </div>
             </div>
