--- a/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                                     Hello, @userEmail !
                                 </p>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Members" asp-action="Logout">Sign out</a>
+                            </li>
                         }
 
                     </ul>
