--- a/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
+++ b/CPW219-eCommerceSite/Views/MenuItem/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MenuItem>
+﻿@model MenuCatalogViewModel
 
 @{
     ViewData["Title"] = "Menu Items Catalog";
@@ -17,7 +17,7 @@
 <p>
     <a asp-action="Create" asp-controller="MenuItems">Create New Menu Item</a>
 </p>
-@if (Model.Count() != 0)
+@if (Model.MenuItems.Count != 0)
 {
     <table class="table table-warning table-hover">
         <thead>
@@ -29,7 +29,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (MenuItem item in Model)
+            @foreach (MenuItem item in Model.MenuItems)
             {
                 <tr>
                     <td>
@@ -54,4 +54,9 @@
 else
 {
     <h2>Nothing to see here!</h2>
+}
+
+@for(int i = 1; i <= Model.LastPage; i++)
+{
+    <p>@i</p>   
 }
