Added Cart Summary Link

--- a/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/CPW219-eCommerceSite/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                                 <a class="nav-link text-dark" asp-controller="Members" asp-action="Logout">Sign out</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cart" asp-action="Summary">Cart</a>
+                        </li>
 
                     </ul>
                 </div>
